--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,18 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.2"
-  }
+    "jest": "^29.7.0",
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^7.0.0"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
